//指定protobuf语法版本
syntax = "proto3";

//定义包名
package Arith;

message ArithRequest {
    int32 A = 1;
    int32 B = 2;

}
message ArithReply{
    int32 C = 1;
}

